--- a/ops/ansible/roles/legislation_explorer/defaults/main.yml
+++ b/ops/ansible/roles/legislation_explorer/defaults/main.yml
@@ -1,10 +1,9 @@
 api_url: http://localhost:8000
 base_path: /
-branch_name: master
 changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
+host_name: localhost
 host: 127.0.0.1
 port: 8001
-repo_url: https://github.com/openfisca/legislation-explorer.git
 ui_strings: |
   {
     "en":
@@ -12,22 +11,21 @@ ui_strings: |
     "fr":
       { "countryName": "France", "search_placeholder": "smic, salaire net" }
   }
+
+repo_url: https://github.com/openfisca/legislation-explorer.git
+branch_name: master
+
+# Optional: SSL certificate
+# An SSL certificate is issued from Let's Encrypt if `letsencrypt_email` is defined.
+letsencrypt_email: null
+letsencrypt_environment: staging # switch to `production` after testing to avoid reaching your Let's Encrypt quota
+
+# Optional: Matomo tracker
+# See more on https://github.com/openfisca/openfisca-tracker
+matomo_url: null
+matomo_site_id: null
+
+# Fully managed by Ansible, you should not need to edit this unless you have a naming collision
 systemd_service_file: /etc/systemd/system/legislation-explorer.service
 unix_group_name: openfisca
 unix_user_name: legislation-explorer
-
-# Nginx
-
-host_name: localhost
-
-# Optional: SSL certificate
-# An SSL certificate is issued from Let's Encrypt if `enable_ssl` and `letsencrypt_email` are both defined.
-enable_ssl: no
-letsencrypt_email: null
-# Start by testing with staging environment, then switch to production once it works, to avoid reaching Let's Encrypt limits.
-letsencrypt_environment: "staging"
-
-# Optional: Matomo tracker
-
-matomo_url: null
-matomo_site_id: null
