Track usage with Matomo

--- a/ops/ansible/inventories/legislation.fr.openfisca.org.yml
+++ b/ops/ansible/inventories/legislation.fr.openfisca.org.yml
@@ -11,3 +11,6 @@ all:
 
       letsencrypt_email: contact@openfisca.org
       letsencrypt_environment: production
+
+      matomo_url: https://stats.data.gouv.fr/piwik.php
+      matomo_site_id: 4
