--- a/ops/ansible/roles/legislation_explorer/defaults/main.yml
+++ b/ops/ansible/roles/legislation_explorer/defaults/main.yml
@@ -3,6 +3,7 @@ app_host: 127.0.0.1
 app_port: 8001
 base_path: /
 changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
+country_code: demo
 host_name: localhost
 ui_strings: |
   {
@@ -26,7 +27,7 @@ matomo_url: null
 matomo_site_id: null
 
 # Fully managed by Ansible, you should not need to edit this unless you have a naming collision
-source_dir: "/home/{{ unix_user_name }}/legislation-explorer"
-systemd_service_file: /etc/systemd/system/legislation-explorer.service
+source_dir: "/home/{{ unix_user_name }}/legislation-explorer-{{ country_code }}"
+systemd_service_file: /etc/systemd/system/legislation-explorer-{{ country_code }}.service
 unix_group_name: openfisca
 unix_user_name: legislation-explorer
