--- a/ops/ansible/inventories/legislation.fr.openfisca.org.yml
+++ b/ops/ansible/inventories/legislation.fr.openfisca.org.yml
@@ -7,6 +7,14 @@ all:
       app_port: 8100
 
       api_url: https://api.fr.openfisca.org/latest
+      country_code: fr
+      ui_strings: |
+        {
+          "en":
+            { "countryName": "France", "search_placeholder": "smic, salaire net" },
+          "fr":
+            { "countryName": "France", "search_placeholder": "smic, salaire net" }
+        }
 
       letsencrypt_email: contact@openfisca.org
       letsencrypt_environment: production
