--- a/ops/Vagrantfile
+++ b/ops/Vagrantfile
@@ -1,9 +1,6 @@
-api_port = ENV["API_PORT"] || 8000
+api_url = ENV["API_URL"] || "https://api.demo.openfisca.org/latest"
 guest_port = 8001
 host_port = ENV["PORT"] || 8001
-
-# From inside the VM, the IP address of the host is fixed to this value, by convention.
-host_ip_from_guest = "192.168.42.1"
 
 
 Vagrant.configure("2") do |config|
@@ -12,7 +9,6 @@ Vagrant.configure("2") do |config|
   # Used to refer to this VM from Ansible playbooks.
   config.vm.define "legislation_explorer"
 
-  config.vm.network "private_network", ip: "192.168.42.10"
   config.vm.network "forwarded_port", guest: guest_port, host: host_port
 
   config.vm.provider :virtualbox do |v|
@@ -36,12 +32,7 @@ Vagrant.configure("2") do |config|
 
     ansible.host_vars = {
       "legislation_explorer" => {
-        # Use the API served from another local VM:
-        "api_url" => "http://#{host_ip_from_guest}:#{api_port}",
-
-        # Use an online instance of the API, for example the one serving OpenFisca-France:
-        # "api_url" => "https://api.fr.openfisca.org/latest",
-
+        "api_url" => api_url,
         "host" => "0.0.0.0",
         "port" => guest_port,
       }
