--- a/ops/ansible/roles/legislation_explorer/defaults/main.yml
+++ b/ops/ansible/roles/legislation_explorer/defaults/main.yml
@@ -1,8 +1,8 @@
 api_url: http://localhost:8000
+app_host: 127.0.0.1
 base_path: /
 changelog_url: https://github.com/openfisca/openfisca-france/blob/master/CHANGELOG.md
 host_name: localhost
-host: 127.0.0.1
 port: 8001
 ui_strings: |
   {
