--- a/ops/ansible/inventories/legislation.fr.openfisca.org.yml
+++ b/ops/ansible/inventories/legislation.fr.openfisca.org.yml
@@ -4,7 +4,7 @@ all:
       ansible_user: root
 
       host_name: legislation.fr.openfisca.org
-      port: 8100
+      app_port: 8100
 
       api_url: https://api.fr.openfisca.org/latest
 
