--- a/ops/ansible/roles/legislation_explorer/tasks/main.yml
+++ b/ops/ansible/roles/legislation_explorer/tasks/main.yml
@@ -13,8 +13,8 @@
           - acl # Provides "setfacl" command, used by Ansible to become another Unix user
           - git
           - nginx
-          - nodejs
-          - npm
+          - nodejs=10.19.0~dfsg-3ubuntu1
+          - npm=6.14.4+ds-1ubuntu2
         state: present
         update_cache: no
 
