Update API location for tests

--- a/.circleci/.env.ci
+++ b/.circleci/.env.ci
@@ -1,4 +1,4 @@
-API_URL=https://demo.openfisca.org/api
+API_URL=https://api.demo.openfisca.org/latest
 CHANGELOG_URL=https://github.com/openfisca/country-template/blob/master/CHANGELOG.md
 
 UI_STRINGS={"en":{"countryName":"Demo", "search_placeholder": "tax, salary"},"fr":{"countryName":"Demo", "search_placeholder": "tax, salary"}}
