--- a/ops/ansible/inventories/legislation.fr.openfisca.org.yml
+++ b/ops/ansible/inventories/legislation.fr.openfisca.org.yml
@@ -3,10 +3,9 @@ all:
     vps-60ea1664.openfisca.org:
       ansible_user: root
 
-      host_name: legislation.fr.openfisca.org
+      api_url: https://api.fr.openfisca.org/latest
       app_port: 8100
 
-      api_url: https://api.fr.openfisca.org/latest
       country_code: fr
       ui_strings: |
         {
@@ -16,8 +15,12 @@ all:
             { "countryName": "France", "search_placeholder": "smic, salaire net" }
         }
 
-      letsencrypt_email: contact@openfisca.org
-      letsencrypt_environment: production
-
       matomo_url: https://stats.data.gouv.fr/piwik.php
       matomo_site_id: 4
+
+      # Reverse proxy
+
+      host_name: legislation.fr.openfisca.org
+
+      letsencrypt_email: contact@openfisca.org
+      letsencrypt_environment: production
