--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     parallelism: 4
     docker:
-      - image: circleci/node:8-jessie-browsers
+      - image: circleci/node:8-browsers
     environment:
       WATAI_TESTS: tests/integration
       SAUCE_USERNAME: openfisca
