--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "bootstrap": "^3.4.1",
+    "btoa": "^1.2.1",
     "copy-webpack-plugin": "^4.5.2",
     "diacritics": "^1.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.12.4",
-    "history": "^2.1.2",
+    "history": "^3.0.0",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -45,12 +46,12 @@
     "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-document-title": "^2.0.2",
-    "react-highlight": "^0.12.0",
     "react-dom": "^16.5.2",
+    "react-highlight": "^0.12.0",
     "react-intl": "^2.7.1",
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
-    "swagger-ui": "~3.17.6",
+    "swagger-ui": "^3.52.5",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
