--- a/.eslintrc
+++ b/.eslintrc
@@ -28,5 +28,13 @@
   "plugins": [
     "react"
   ],
-  "extends": ["eslint:recommended", "plugin:react/recommended"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "settings": {
+      "react": {
+      "version": "detect"
+    }
+  }
 }
