--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently --kill-others 'npm run dev:app-server' 'npm run dev:webpack-dev-server'",
     "dev:app-server": "NODE_ENV=development node --require dotenv/config index.js",
     "dev:webpack-dev-server": "node --require dotenv/config --require babel-register src/server/webpack-dev-server.js",
+    "flow": "flow check",
     "lint": "eslint --ext .js,.jsx .",
     "start": "NODE_ENV=production node --require dotenv/config index.js",
     "test:unit": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
@@ -27,6 +28,7 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
@@ -36,20 +38,20 @@
     "diacritics": "^1.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.12.4",
-    "history": "^2.1.2",
+    "history": "^4.10.1",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
-    "piwik-react-router": "^0.12.1",
-    "prop-types": "^15.6.2",
-    "ramda": "^0.25.0",
+    "prop-types": "^15.8.1",
+    "ramda": "^0.28.0",
     "react": "^16.5.2",
     "react-document-title": "^2.0.2",
     "react-dom": "^16.5.2",
     "react-highlight": "^0.12.0",
     "react-intl": "^2.7.1",
-    "react-router": "^3.2.1",
+    "react-piwik": "^1.12.0",
+    "react-router-dom": "^5.3.4",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "^3.52.5",
     "webpack": "^4.16.5",
@@ -62,6 +64,8 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.195.1",
+    "flow-typed": "^3.8.0",
     "mocha": "^5.2.0",
     "piping": "^1.0.0-rc.3",
     "react-transform-hmr": "^1.0.4",
