Add test to scroll

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,7 @@
 [ignore]
 <PROJECT_ROOT>/.*
 !<PROJECT_ROOT>/src/utils/periods.js
-!<PROJECT_ROOT>/src/utils/search.js
+!<PROJECT_ROOT>/src/utils/findCountryModelItems.test.js
 
 [libs]
 flow-typed
