--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:app-server": "NODE_ENV=development node --require dotenv/config index.js",
     "dev:webpack-dev-server": "node --require dotenv/config --require babel-register src/server/webpack-dev-server.js",
     "flow": "flow check",
-    "lint": "eslint --ext .js,.jsx .",
+    "lint": "eslint --ext .ts,.js,.jsx .",
     "start": "NODE_ENV=production node --require dotenv/config index.js",
     "test:unit": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
     "test:integration": "watai tests/integration",
@@ -28,7 +28,6 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
@@ -60,6 +59,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "babel-preset-flow": "^6.23.0",
     "chai": "^4.3.7",
     "concurrently": "^3.6.1",
     "enzyme": "^3.7.0",
