--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev:app-server": "NODE_ENV=development node --require dotenv/config index.js",
     "dev:webpack-dev-server": "node --require dotenv/config --require babel-register src/server/webpack-dev-server.js",
     "lint": "eslint --ext .js,.jsx .",
+    "format": "npm run lint -- --fix",
     "start": "NODE_ENV=production node --require dotenv/config index.js",
-    "test:unit": "mocha --compilers js:babel-core/register tests/unit/**/*.js",
+    "test:unit": "mocha --require @babel/register tests/unit/**/*.js",
     "test:integration": "watai tests/integration",
     "test": "npm run lint && npm run test:unit && npm run test:integration"
   },
@@ -20,16 +21,8 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "@babel/node": "^7.20.5",
     "accept-language": "^3.0.17",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.9.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
     "bootstrap": "^3.4.1",
     "copy-webpack-plugin": "^4.5.2",
     "diacritics": "^1.3.0",
@@ -45,8 +38,9 @@
     "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-document-title": "^2.0.2",
-    "react-highlight": "^0.12.0",
     "react-dom": "^16.5.2",
+    "react-highlight": "^0.12.0",
+    "react-hot-loader": "^3.1.3",
     "react-intl": "^2.7.1",
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
@@ -55,16 +49,23 @@
     "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "concurrently": "^3.6.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "^5.6.1",
-    "eslint-plugin-react": "^7.11.1",
-    "mocha": "^5.2.0",
-    "piping": "^1.0.0-rc.3",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/register": "^7.18.9",
+    "babel-loader": "^9.1.0",
+    "chai": "^4.3.7",
+    "concurrently": "^7.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "eslint": "^8.29.0",
+    "eslint-plugin-react": "^7.31.11",
+    "mocha": "^10.2.0",
+    "piping": "^1.0.0-rc.4",
     "react-transform-hmr": "^1.0.4",
-    "should": "^13.2.3",
     "watai": "^0.7.0",
     "webpack-dev-server": "^3.1.14",
     "webpack-error-notification": "^0.1.8"
