--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@babel/node": "^7.20.5",
     "accept-language": "^3.0.17",
     "bootstrap": "^3.4.1",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^11.0.0",
     "diacritics": "^1.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.12.4",
-    "history": "^2.1.2",
+    "history": "^3.3.0",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -40,13 +40,12 @@
     "react-document-title": "^2.0.2",
     "react-dom": "^16.5.2",
     "react-highlight": "^0.12.0",
-    "react-hot-loader": "^3.1.3",
     "react-intl": "^2.7.1",
     "react-router": "^3.2.1",
     "serve-favicon": "^2.3.0",
     "swagger-ui": "~3.17.6",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -65,10 +64,8 @@
     "eslint-plugin-react": "^7.31.11",
     "mocha": "^10.2.0",
     "piping": "^1.0.0-rc.4",
-    "react-transform-hmr": "^1.0.4",
     "watai": "^0.7.0",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-error-notification": "^0.1.8"
+    "webpack-dev-server": "^4.11.1"
   },
   "private": true
 }
