--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "OpenFisca - Legislation Explorer",
   "scripts": {
-    "build": "node --require dotenv/config node_modules/webpack/bin/webpack.js --config ./webpack.config.prod.babel.js",
+    "build": "node --require esm --require dotenv/config node_modules/webpack/bin/webpack.js --config ./webpack.config.prod.babel.js",
     "clean": "rm -rf public",
     "dev": "concurrently --kill-others 'npm run dev:app-server' 'npm run dev:webpack-dev-server'",
     "dev:app-server": "NODE_ENV=development node --require dotenv/config index.js",
@@ -24,7 +24,7 @@
     "@babel/node": "^7.20.5",
     "accept-language": "^3.0.17",
     "bootstrap": "^3.4.1",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^9.1.0",
     "diacritics": "^1.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.12.4",
@@ -62,6 +62,7 @@
     "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
+    "esm": "^3.2.25",
     "mocha": "^10.2.0",
     "piping": "^1.0.0-rc.4",
     "watai": "^0.7.0",
