--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     parallelism: 4
     docker:
-        - image: circleci/node:10-browsers
+        - image: cimg/node:16.18-browsers
     environment:
       WATAI_TESTS: tests/integration
       SAUCE_USERNAME: openfisca
@@ -20,11 +20,11 @@ jobs:
           key: sc-4.8.2
       - run:
           name: Install app dependencies
-          command: npm install
+          command: npm install --force
       - run:
           name: Install saucelabs
           command: |
-            npm install saucelabs@^1.5.0 --no-save # allow sending Watai results to SauceLabs. Don't save in package.json, as this would change its checksum and mess up the cache.
+            npm install saucelabs@^1.5.0 --force --no-save # allow sending Watai results to SauceLabs. Don't save in package.json, as this would change its checksum and mess up the cache.
             if [ -d sc ]; then exit; fi  # sc has already been downloaded
             mkdir sc
             wget https://saucelabs.com/downloads/sc-4.8.2-linux.tar.gz --directory-prefix sc
